    + Drop checks for old dpkg versions and always use the necessary Perl
      modules (Dpkg::Changelog::Parse, Dpkg::Vendor::Ubuntu,
      Dpkg::Changelog::Entry::Debian).
    + Add changelog info support for hg and bzr.
  * annotate-output:
    + Handle an incomplete line of output.  (Closes: #695609)
    + Don't treat backslashes in the command's output as an escape.  (Closes:
      #695613)

  [ Dmitry Smirnov ]
  * licensecheck: Remove any regular comments pattern. (Closes: #526698)

  [ Paul Wise ]
  * checkbashisms: When examining a bash script, indicate the lack of use of bashisms.
  * uscan:
    + Access GitHub directly instead of using githubredir.debian.net in
      example GitHub watch URL.
    + Add an example watch URL that matches the various file extensions used
      by common archive formats.
    + Add an example watch URL for Google Code projects.

  [ Benjamin Drung ]
  * debian/control: Mark devscripts Multi-Arch: foreign.
    Thanks to Colin Watson. (Closes: #694760)

  [ Cyril Brulebois ]
  * Don't auto reverse diffs when DEBDIFF_AUTO_VER_SORT is set to yes, and
    when the version in both packages is the same. (Closes: #650732)

  [ tony mancill ]
  * debsnap: Escape the package name when used in regex.  (Closes: #696018)

 -- James McCoy <jamessan@debian.org>  Sat, 15 Sep 2012 16:12:16 -0400

devscripts (2.12.6) unstable; urgency=low

  * Actual install German translation.

 -- Benjamin Drung <bdrung@debian.org>  Sun, 25 Nov 2012 00:30:00 +0100

devscripts (2.12.5) unstable; urgency=low

  [ James McCoy ]
  * bts:
    + Provide a clearer error message when Authen::SASL isn't installed.
      (Closes: #689816)
    + Don't require a usertag after 'bts usertag <bug> ='.  (Closes: #689815)
    + Don't require a package after 'bts affects <bug> ='.  (Closes: #690131)
  * Add German translation of man pages.  Thanks to Chris Leick.  (Closes:
    #687985)

  [ Benjamin Drung ]